kubernetes/homebox/helm/homebox/deployment.yaml
---
# Source: homebox/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
  labels:
    app.kubernetes.io/name: homebox
    app.kubernetes.io/instance: homebox
    app.kubernetes.io/version: "0.26.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homebox
      app.kubernetes.io/instance: homebox
  template:
    metadata:
      annotations:
        checksum/secret: 41a84068e4a1550e6820e827f29498d76e02dc888aae1acdb250c56d83e04c88
        reloader.stakater.com/auto: "true"
      labels:
        app.kubernetes.io/name: homebox
        app.kubernetes.io/instance: homebox
        app.kubernetes.io/version: "0.26.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: homebox
      securityContext:
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: homebox
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
          image: "sysadminsmedia/homebox:0.26.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7745
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          resources:
            limits:
              cpu: 300m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - mountPath: "/data"
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: "homebox-data"
